fix spacing issue

--- a/src/sections/website.scss
+++ b/src/sections/website.scss
@@ -2,25 +2,24 @@
   font-size: 18px;
   color: #555;
   background-attachment: fixed;
-  line-height: 1.7;
+  line-height: 1.8;
   h1, h2, h3, h4 {
     color: #222;
     line-height: 1.3;
   }
   h1 {
-    font-size: calc(54px + 0.3vw);
+    font-size: calc(55px + 0.1vw);
     font-weight: 600;
     letter-spacing: -.01em;
     @media (max-width: 1200px) {
-      font-size: calc(36px + 0.6vw);
+      font-size: calc(38px + 0.6vw);
     }
-
   }
   h2 {
     font-size: 40px;
     font-weight: 300;
     margin-top: 0;
-    @media (max-width: 992px) {font-size:30px;}
+    @media (max-width: 992px) {font-size:32px;}
   }
   h3 {
     font-size: 26px;
